package com.smile.command;

/**
 * @author smi1e
 * Date 2019/8/26 13:30
 * Description
 */
public class Light {
    public void on(){
        System.out.println("灯已经打开");
    }
    public void off(){
        System.out.println("灯已经关上");
    }
}
